  \item The \code{paste} and \code{paste0} functions have been sped up.
        They are now about two to six times
        faster than in R-3.4.0, and are usually faster than the 
        \code{stri_paste} function from the \code{stringi} package.
        Substring extraction and replacement with \code{substr} or
        \code{substring} has also been sped up for long strings.
  \item Relational operators are now faster, and may sometimes be done in 
        helper threads (though currently without pipelining of data).
        Computations such as \code{sum(vec>0)} are now done with a
        merged procedure that avoids creating \code{vec>0} as an intermediate
        value.
  \item The \code{rep} function is now often faster for string vectors,
        and for vectors of any type that have names.
  \item Improved methods for symbol lookup are now used, which increase
        speed in many contexts, and especially in functions that are
        defined in packages (rather than in the global workspace).
  \item The speed of \code{.Call} has been improved.
  \item New versions of the C matrix multiply functions are now used,
        which may be faster due to use of the C "restrict" keyword to
        allow better optimization.
  \item The \code{\%\%} and \code{\%/\%} operators are now faster when 
        their operands are real vectors that contain integer values.
  \item General interpretive overhead has been reduced in some contexts,
        particularly when extracting or replacing subsets with 
        \code{[.]} or \code{[[.]]}.
  }}

  \subsection{FEATURE CHANGES}{
  \itemize{
  \item The old serialization format, used prior to December 2001, is 
        no longer supported in pqR.  Code to support it would need to
        be changed to accomodate recent changes in pqR, and meaningful
        testing of such changes seems like it would require excessive
        efforts.
  \item It is now allowed to set the length of an ``expression''