@@ -1,3 +1,5 @@
 Improvements to S4 class operations.
 
 Defined .el.methods as a primitive, used for el in methods package.
+
+Takes new version of @<- as a primitive from R-3.0.0.
