@@ -12,7 +12,6 @@ export(.TraceWithMethods)
 export(.untracedFunction)
 export(.doTracePrint)
 export(.valueClassTest)
-export("@<-")
 export(Arith)
 export(Compare)
 export(Complex)
@@ -45,6 +44,7 @@ export(cacheMethod)
 export(callGeneric)
 export(callNextMethod)
 export(canCoerce)
+export(checkAtAssignment)
 export(checkSlotAssignment)
 export(classMetaName)
 export(classLabel)
