@@ -330,18 +330,6 @@ checkAtAssignment <- function(cl, name, valueClass)
     TRUE
 }
 
-## "@" <-
-##   function(object, name)
-##   .Internal(object@name)
-
-"@<-" <-
-   function(object, name, value) {
-     arg <- substitute(name)
-     if(is.name(arg))
-       name <- as.character(arg)
-     "slot<-"(object, name, TRUE, value)
-   }
-
 ##  The names of the class's slots.  The argument is either the name
 ##  of a class, or an object from the relevant class.
 
