@@ -55,9 +55,9 @@ for(f in ls(.ArgsEnv, all.names=TRUE))
 ff <- ls("package:base", all.names=TRUE)
 ff <- ff[sapply(ff, function(x) is.primitive(get(x, "package:base")))]
 lang_elements <-
-    c('$', '$<-', '&&', '(', ':', '..', '<-', '<<-', '=', '->', '->>', '@',
-      '[', '[<-', '[[', '[[<-', 'break', 'for', 'function', 'if', 'next',
-      'repeat', 'return', 'while', '{', '||', '~')
+  c('$', '$<-', '&&', '(', ':', '..', '<-', '<<-', '=', '->', '->>', '@', '@<-',
+    '[', '[<-', '[[', '[[<-', 'break', 'for', 'function', 'if', 'next',
+    'repeat', 'return', 'while', '{', '||', '~')
 
 known <- c(ls(.GenericArgsEnv, all.names=TRUE),
            ls(.ArgsEnv, all.names=TRUE),
